--- a/codelap-movie-korea.html
+++ b/codelap-movie-korea.html
@@ -80,7 +80,7 @@
     </nav>
     <section id="gallery_wrap">
         <ul class="slide_gallery">
-            <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "images/kor_1.jpg"></a>
+            <a href=""><img src = "images/kor_1.jpg"></a>
             <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_2.jpg"></a>
             <a href="https://www.youtube.com/embed/rvcN5uFf_VI"><img src = "images/kor_3.jpg"></a>
             <a href="https://www.youtube.com/embed/E-LkaQgj0qM"><img src = "images/kor_4.jpg"></a>
