--- a/codelap-movie-romance.html
+++ b/codelap-movie-romance.html
@@ -12,7 +12,6 @@
     <header>
         공란
     </header>
-    <div class="ㅁ">
         <div class="main" >
             <h3>이런영화 어때요?</h3>
         </div>
@@ -21,49 +20,59 @@
             <ul>
             <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
 <!--        김종욱 찾기     -->
+                <p>김종욱 찾기</p>
         </ul>
             <ul>
                 <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
                 <!--        김종욱 찾기     -->
+                <p>김종욱 찾기</p>
             </ul>
 
             <ul>
                 <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
                 <!--        김종욱 찾기     -->
+                <p>김종욱 찾기</p>
             </ul>
             </section>
             <section>
                 <ul>
                     <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
                     <!--        김종욱 찾기     -->
+                    <p>김종욱 찾기</p>
                 </ul>
                 <ul>
                     <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
                     <!--        김종욱 찾기     -->
+                    <p>김종욱 찾기</p>
                 </ul>
 
                 <ul>
                     <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
                     <!--        김종욱 찾기     -->
+                    <p>김종욱 찾기</p>
                 </ul>
             </section>
             <section>
                 <ul>
                     <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
                     <!--        김종욱 찾기     -->
+                    <p>김종욱 찾기</p>
                 </ul>
                 <ul>
                     <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
                     <!--        김종욱 찾기     -->
+                    <p>김종욱 찾기</p>
                 </ul>
 
                 <ul>
                     <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
                     <!--        김종욱 찾기     -->
+                    <div>김종욱 찾기</div>
                 </ul>
             </section>
-
             </div>
+        <div class="main_2">
+             <div>1/3</div>
     </div>
 </body>
 </html>
