JHLee commit complete

--- a/codelap-movie-korea.html
+++ b/codelap-movie-korea.html
@@ -73,7 +73,7 @@
 
     <section id="gallery_wrap">
         <ul class="slide_gallery">
-            <a href=""><img src = "images/kor_1.jpg"></a>
+            <a href="https://www.youtube.com/embed/8DtrRadXsjI?autoplay=1&mute=1"><img src = "images/kor_1.jpg"></a>
             <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_2.jpg"></a>
             <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_3.jpg"></a>
             <a href="https://www.youtube.com/embed/E-LkaQgj0qM"><img src = "images/kor_4.jpg"></a>
