JHLee commit complete

--- a/codelap-movie-korea.html
+++ b/codelap-movie-korea.html
@@ -63,16 +63,17 @@
         </p>
         <ul>
             <li>랭킹</li>
-            <li>한국</li>
-            <li>해외</li>
+            <li><a href="#korea">한국</li>
+            <li><a href="#english">해외</li>
             <li>로맨스</li>
             <li>액션</li>
             <li>호러</li>
         </ul>
     </nav>
 
-    <section id="gallery_wrap">
-        <ul class="slide_gallery">
+    <section>
+        <ul>
+            <h3 id="korea">한국영화</h3>
             <a href="https://www.youtube.com/embed/8DtrRadXsjI?autoplay=1&mute=1"><img src = "images/kor_1.jpg"></a>
             <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_2.jpg"></a>
             <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_3.jpg"></a>
@@ -82,6 +83,17 @@
             <a href="https://www.youtube.com/embed/DYE2aDl2RhI"><img src = "images/kor_7.jpg"></a>
             <a href="https://www.youtube.com/embed/JfGpTWM-TNk"><img src = "images/kor_8.jpg"></a>
             <a href="https://www.youtube.com/embed/bETrnbq_OLM"><img src = "images/kor_9.jpg"></a>
+        </ul>
+
+        <ul>
+            <h3 id="english">해외영화</h3>
+            <a href="https://www.youtube.com/embed/hU-BFuTNJNc"><img src = "images/eng_1.jpg"></a>
+            <a href="https://www.youtube.com/embed/XdbRsILsJyM"><img src = "images/eng_2.jpg"></a>
+            <a href="https://www.youtube.com/embed/d2VN6NNa9BE"><img src = "images/eng_3.jpg"></a>
+            <a href="https://www.youtube.com/embed/Qei594KgLgM"><img src = "images/eng_4.jpg"></a>
+            <a href="https://www.youtube.com/embed/aoT4RjVq41Y"><img src = "images/eng_5.jpg"></a>
+            <a href="https://www.youtube.com/embed/RI-hvj-kZlw"><img src = "images/eng_6.jpg"></a>
+
         </ul>
     </section>
 
