--- a/codelap-movie-romance.html
+++ b/codelap-movie-romance.html
@@ -13,66 +13,80 @@
         공란
     </header>
         <div class="main" >
-            <h3>이런영화 어때요?</h3>
+            <h3>이런영화 어때요?<div class="more">다양하게 둘러보기</div></h3>
         </div>
         <div class="main_1">
         <section>
-            <ul>
+            <ul class="size1">
             <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
 <!--        김종욱 찾기     -->
-                <p>김종욱 찾기</p>
-        </ul>
-            <ul>
-                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
-                <!--        김종욱 찾기     -->
-                <p>김종욱 찾기</p>
+                <div class="text_0">김종욱 찾기</div>
+                <div class="text_1">개봉일:2010</div>
+                <div class="text_1">평점:3.5<div class="more">줄거리</div>
+            </ul>
+            <ul class="size1">
+                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/jENE7VlqUpBKBIfpyHRing.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMmt3WjNsdlpEbDFlRzFwZUdrNVltUjZhV2xySW4wLjRjRFByUGhqQUt2c2tsdndzWmRmUmM2bjlYbGc1OWJaaWhXWXJmaEdMeWc
+">
+                <div class="text_0">어바웃타임</div>
+                <div class="text_1">개봉일:2013</div>
+                <div class="text_1">평점:4.5<div class="more">줄거리</div>
+            </ul>
+            <ul class="size1">
+                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/PLKW45bXTvLeWY9XXDM0eQ.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMM2x0WVdsc2JXdGljbVZ0Y1RadGRuUTNaV3BuSW4wLlZQYWs3ZUxpRnhaLXJGQ2hDbm1NZUREck51dmVqQ3NaZTYzNWRqd1A3UjA" ><!--        김종욱 찾기     -->
+                <div class="text_0">플랜맨</div>
+                <div class="text_1">개봉일:2013</div>
+                <div class="text_1">평점:3.5<div class="more">줄거리</div>
+            </ul>
+        </section>
+        <section>
+            <ul class="size1">
+                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/Lbf-6tntBHjpFUjZefUg3A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMM2RxZW1kbVkyUnBNM2xuY1RKMWVHMXNOak53SW4wLnZMc2lmR0Jpc2g1ckw3YkpUaU5HZ2xDeDMxa2I0Z21hZEJCYzhVcENxMlU">
+                    <!--        김종욱 찾기     -->
+                <div class="text_0">맘마미아</div>
+                <div class="text_1">개봉일:2008</div>
+                <div class="text_1">평점:3.8<div class="more">줄거리</div>
+            </ul>
+            <ul class="size1">
+                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/nxpZUYzDqkjvF3X2ZRDfAw.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXlMM04wYjNKbEwybHRZV2RsTHpFMk9UUTNOekF5TkRrMU5qVTVNalEzTURNaWZRLnRKdG1TRjJ4bnVGX3BLODg0dnExYnF1MTYyR2Y1SXR0bWRiQktydTQxZEE">
+                 <div class="text_0">30일</div>
+                <div class="text_1">개봉일:2023</div>
+                <div class="text_1">평점:3.2<div class="more">줄거리</div>
             </ul>
 
-            <ul>
-                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
-                <!--        김종욱 찾기     -->
-                <p>김종욱 찾기</p>
+            <ul class="size1">
+                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/hPZzbajorJEDfMo-N-Cy6w.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXlMM04wYjNKbEwybHRZV2RsTHpFMk1UYzROalkyTXpRME1qQXhPRGMwTkRBaWZRLjM4VE5MamZzdzA4SkcyWHctMDBKWkZ0RVBCSTEtOFlTOGs2OEZQWjlDTXc">
+                    <!--        김종욱 찾기     -->
+                <div class="text_0">플립</div>
+                <div class="text_1">개봉일:2017</div>
+                <div class="text_1">평점:4.0<div class="more">줄거리</div>
             </ul>
-            </section>
-            <section>
-                <ul>
-                    <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
+        </section>
+        <section>
+            <ul class="size1">
+                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src ="https://an2-img.amz.wtchn.net/image/v2/IixteEuc7MXKdmVDP1hK4g.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXlMM04wYjNKbEwybHRZV2RsTHpFMk56RTNOemMzTURRNE5UVXhORFl4TlRZaWZRLlkwTlhHdTFmSklqdW1HR2xmR1ZxeF9hcmFRUTZldkFLUktjVy1JUVhvTTg">
+                <!--        김종욱 찾기     -->
+                <div class="text_0">상견니</div>
+                <div class="text_1">개봉일:2023</div>
+                <div class="text_1">평점:4.1<div class="more">줄거리</div>
+            </ul>
+            <ul class="size1">
+                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/KpEeV_M9OjsIctq0QNLTnw.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMkZ1YkdWcVoySXlaWFZuWm5WallXNW1abVl4SW4wLlp3MHlpeVV5MzliMTdjVXg1MTdLSWlRb184YWhqc3ZkRDFIZjd6WEwtMnc">
+                 <!--        김종욱 찾기     -->
+                <div class="text_0">허니와 클로버</div>
+                <div class="text_1">개봉일:2006</div>
+                <div class="text_1">평점:3.4<div class="more">줄거리</div>
+            </ul>
+            <ul class="size1">
+                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/Dm1CV3VSKQ69YJUAy0FMNg.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMM2xuWW5sd2R6UmtNMlZxYUdGMmNHVmhNSFZ4SW4wLm9lRW5ITklPdGZCLUx4OFBGenNwSi1yZ0ZuNnBDNzFhWXRpUGVRSXMyeXc"">
                     <!--        김종욱 찾기     -->
-                    <p>김종욱 찾기</p>
-                </ul>
-                <ul>
-                    <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
-                    <!--        김종욱 찾기     -->
-                    <p>김종욱 찾기</p>
-                </ul>
-
-                <ul>
-                    <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
-                    <!--        김종욱 찾기     -->
-                    <p>김종욱 찾기</p>
-                </ul>
-            </section>
-            <section>
-                <ul>
-                    <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
-                    <!--        김종욱 찾기     -->
-                    <p>김종욱 찾기</p>
-                </ul>
-                <ul>
-                    <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
-                    <!--        김종욱 찾기     -->
-                    <p>김종욱 찾기</p>
-                </ul>
-
-                <ul>
-                    <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
-                    <!--        김종욱 찾기     -->
-                    <div>김종욱 찾기</div>
-                </ul>
-            </section>
-            </div>
+                <div class="text_0">이터널 션샤인</div>
+                <div class="text_1">개봉일:2004</div>
+                <div class="text_1">평점:4.2<div class="more">줄거리</div>
+            </ul>
+        </section>
+        </div>
         <div class="main_2">
-             <div>1/3</div>
+             <h4>1/3</h4>
     </div>
 </body>
 </html>
