JHLee commit complete

--- a/codelap-movie-korea.html
+++ b/codelap-movie-korea.html
@@ -59,7 +59,7 @@
     </header>
     <nav>
         <p>
-            <button id="btn">추천순위</button>
+            <button id="btn"><a href="codelap-movie-popul.html" target="_blank">추천순위</button>
         </p>
         <ul>
             <li>랭킹</li>
