JHLee commit complete

--- a/codelap-movie-korea.html
+++ b/codelap-movie-korea.html
@@ -11,12 +11,11 @@
             color:white;
             text-align: center;
             padding: 100px;
-            border: 1px solid black;
+            /*border: 1px solid black;*/
         }
         nav{
             background-color: white;
-            /*color: green;*/
-            color : red;
+            color: green;
             text-align: center;
         }
 
@@ -51,11 +50,12 @@
             text-align: left;
             margin-bottom: 20px;
         }
+
     </style>
 
 <body>
     <header>
-
+        <h1>코드랩 무비</h1>
     </header>
     <nav>
         <p>
@@ -74,7 +74,7 @@
     <section>
         <ul>
             <h3 id="korea">한국영화</h3>
-            <a href="https://www.youtube.com/embed/8DtrRadXsjI?autoplay=1&mute=1"><img src = "images/kor_1.jpg"></a>
+            <a href="https://www.youtube.com/embed/8DtrRadXsjI"><img src = "images/kor_1.jpg"></a>
             <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_2.jpg"></a>
             <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_3.jpg"></a>
             <a href="https://www.youtube.com/embed/E-LkaQgj0qM"><img src = "images/kor_4.jpg"></a>
