--- a/codelap-movie-korea.html
+++ b/codelap-movie-korea.html
@@ -76,7 +76,7 @@
             <h3 id="korea">한국영화</h3>
             <a href="https://www.youtube.com/embed/8DtrRadXsjI"><img src = "images/kor_1.jpg"></a>
             <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_2.jpg"></a>
-            <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_3.jpg"></a>
+            <a href="https://www.youtube.com/embed/rvcN5uFf_VI"><img src = "images/kor_3.jpg"></a>
             <a href="https://www.youtube.com/embed/E-LkaQgj0qM"><img src = "images/kor_4.jpg"></a>
             <a href="https://www.youtube.com/embed/PG7ftMRWO9c"><img src = "images/kor_5.jpg"></a>
             <a href="https://www.youtube.com/embed/3PWIFA-ulP0"><img src = "images/kor_6.jpg"></a>
